[gd_scene load_steps=24 format=3 uid="uid://r4mah1dtchuy"]

[ext_resource type="Script" uid="uid://bdo5raheyq4r6" path="res://scripts/player/Player.gd" id="1_cq720"]
[ext_resource type="Script" uid="uid://b43ja6fho0kpv" path="res://scripts/state_machines/StateMachine.gd" id="2_2v5k8"]
[ext_resource type="Script" uid="uid://cscbc83muvo56" path="res://scripts/player/Camera.gd" id="2_wi1le"]
[ext_resource type="Script" uid="uid://croi5qvprjlq3" path="res://scripts/player/Arms.gd" id="3_kskxk"]
[ext_resource type="Script" uid="uid://b4jko4wec3iuq" path="res://scripts/state_machines/states/PlayerStateIdle.gd" id="3_vmcut"]
[ext_resource type="PackedScene" uid="uid://cwjessucx4hgj" path="res://scenes/combat/weapon_base.tscn" id="3_xfl5t"]
[ext_resource type="Script" uid="uid://cxt7ui8n6yqjp" path="res://scripts/state_machines/states/PlayerStateWalk.gd" id="4_e1xlu"]
[ext_resource type="Script" uid="uid://dnulyj3n5jy8g" path="res://scripts/state_machines/states/PlayerStateJump.gd" id="5_kei8u"]
[ext_resource type="Script" uid="uid://sjnr2qtyyixa" path="res://scripts/state_machines/states/PlayerStateFall.gd" id="6_2ffql"]
[ext_resource type="PackedScene" uid="uid://gfai6ybdjjs1" path="res://scenes/characters/player_arms.tscn" id="6_jv5ih"]
[ext_resource type="Script" uid="uid://dl7e30dea1n1c" path="res://scripts/state_machines/states/PlayerStateCrouch.gd" id="7_rkty4"]
[ext_resource type="Script" uid="uid://u217mq60x4lf" path="res://scripts/player/PlayerInteractionRay.gd" id="7_tdxe5"]
[ext_resource type="Script" uid="uid://dllosfotilyb" path="res://scripts/state_machines/states/PlayerStateProne.gd" id="8_ve44b"]
[ext_resource type="AudioStream" uid="uid://ddndqj4ppghm6" path="res://assets/audio/people/footstep_dry1.wav" id="14_a1tyw"]
[ext_resource type="Script" uid="uid://nn5vlanlo1d2" path="res://scripts/entities/AudioHandler.gd" id="14_gwd2c"]
[ext_resource type="AudioStream" uid="uid://g7aksuoqbv3y" path="res://assets/audio/people/footstep_dry2.wav" id="15_d0eyw"]
[ext_resource type="AudioStream" uid="uid://4u3blq5c8bsm" path="res://assets/audio/people/footstep_dry3.wav" id="16_qrbsu"]
[ext_resource type="AudioStream" uid="uid://bx15utd1r3vx7" path="res://assets/audio/people/footstep_dry4.wav" id="17_kd3iy"]
[ext_resource type="AudioStream" uid="uid://y1vllgnocasf" path="res://assets/audio/people/footstep_dry5.wav" id="18_ls4i5"]
[ext_resource type="AudioStream" uid="uid://bo0us0ds2usly" path="res://assets/audio/people/footstep_dry6.wav" id="19_vllgc"]
[ext_resource type="AudioStream" uid="uid://dp0j46ihuk24e" path="res://assets/audio/people/footstep_dry7.wav" id="20_f4hgq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_22wlq"]
radius = 0.35
height = 1.75

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kg4hm"]
streams_count = 7
stream_0/stream = ExtResource("14_a1tyw")
stream_1/stream = ExtResource("15_d0eyw")
stream_2/stream = ExtResource("16_qrbsu")
stream_3/stream = ExtResource("17_kd3iy")
stream_4/stream = ExtResource("18_ls4i5")
stream_5/stream = ExtResource("19_vllgc")
stream_6/stream = ExtResource("20_f4hgq")

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_cq720")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_22wlq")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera" type="Camera3D" parent="Head"]
script = ExtResource("2_wi1le")

[node name="Arms" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, -0.195, 0.015)
script = ExtResource("3_kskxk")

[node name="Weapon" parent="Head/Arms" instance=ExtResource("3_xfl5t")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.188, -0.02, -0.367)
visible = false
aim_position = Vector3(0.011, 0.117, -0.2)

[node name="InteractionRay" type="RayCast3D" parent="Head/Arms"]
visible = false
target_position = Vector3(0, 0, -1.5)
collision_mask = 8
collide_with_areas = true
debug_shape_custom_color = Color(0.941176, 0, 0.0745098, 1)
script = ExtResource("7_tdxe5")

[node name="Arms" parent="Head/Arms" instance=ExtResource("6_jv5ih")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="StandingCeillingCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.75, 0)
collision_mask = 3

[node name="CrouchingCeillingCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.75, 0)
collision_mask = 3

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_2v5k8")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_vmcut")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("4_e1xlu")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("5_kei8u")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("6_2ffql")

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource("7_rkty4")

[node name="Prone" type="Node" parent="StateMachine"]
script = ExtResource("8_ve44b")

[node name="AudioHandler" type="Node3D" parent="."]
script = ExtResource("14_gwd2c")

[node name="FootstepsSound" type="AudioStreamPlayer3D" parent="AudioHandler"]
stream = SubResource("AudioStreamRandomizer_kg4hm")

[node name="FootstepsTimer" type="Timer" parent="AudioHandler"]
process_callback = 0
wait_time = 0.6

[connection signal="timeout" from="AudioHandler/FootstepsTimer" to="AudioHandler" method="on_footsteps_timeout"]
